--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <h2>Info</h2>
             <ul>
                 <li>Double-click to edit a todo</li>
-                <li>Drag & Drop if you want reorder the todolist (Coming soon)</li>
+                <li>Drag & Drop if you want to reorder the todolist</li>
             </ul>
             <h2>Settings</h2>
             <ul>
@@ -58,6 +58,7 @@
         </div>
     </div>
 
+    <script src="Sortable.js"></script>
     <script src="main.js"></script>
 </body>
 
