--- a/index.html
+++ b/index.html
@@ -10,35 +10,36 @@
     <link href="https://fonts.googleapis.com/css?family=Catamaran" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+
+    <script src="main.js" defer></script>
 </head>
 
 <body>
-    <div class="small-container">
+    <div id="main" class="small-container">
         <h1>Todos</h1>
         <form id="addForm">
+            <label id="checkall" class="fas fa-square bradfix fa-2x"></label>
             <input id="item" type="text" class="input" placeholder="Write new todo">
-            <label class="fas fa-question-circle fa-2x" for="modal-1"></label>
+            <label id="info" class="fas fa-question-circle bradfix fa-2x" for="modal-1"></label>
         </form>
         <ul></ul>
-        <div class="bottomGrid">
-            <div>
+        <div id="bottom" class="bottomGrid">
+            <div id="todoCountText" class="bradfix">
                 <span id="todoCount">0</span> active items
             </div>
             <div>
-                <a href="#all"><button id="allFilter" class="active">All</button></a>
-                <a href="#active"><button id="activeFilter">Active</button></a>
-                <a href="#done"><button id="doneFilter">Completed</button></a>
+                <button id="allFilter" class="active">All</button>
+                <button id="activeFilter">Active</button>
+                <button id="completedFilter">Completed</button>
             </div>
             <div>
-                <button id="clear">Clear All</button>
+                <button id="clear" hidden>Clear Completed</button>
             </div>
         </div>
     </div>
-
-    <!-- HIDDEN -->
+    
+    <!-- MODAL - info rutan till höger om input -->
     <input class="hidden" id="modal-1" type="checkbox" />
-
-    <!-- MODAL -->
     <div class="modal">
         <label class="modal_bg" for="modal-1"></label>
         <div class="modal_inner">
@@ -46,20 +47,10 @@
             <h2>Info</h2>
             <ul>
                 <li>Double-click to edit a todo</li>
-                <li>Drag & Drop if you want to reorder the todolist</li>
-            </ul>
-            <h2>Settings</h2>
-            <ul>
-                <li class="settingsGrid">
-                    <input class="pile" type="checkbox"><span>What that pile of pappers effect?</span>
-                </li>
             </ul>
             <p class="credits">Made by: Fatlum Ibishi & Nicklas Damgren</p>
         </div>
     </div>
-
-    <script src="Sortable.js"></script>
-    <script src="main.js"></script>
 </body>
 
 </html>
